<resources>

    <string name="app_name" translatable="false">Awarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Days' checkboxes -->
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>

    <!-- Remaining time -->
    <string name="alarm_remaining_time">Remaining</string>

    <!-- Ringtone -->
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_default" translatable="false">Over The Horizon</string>
    <string name="not_valid_file">Not a valid audio file</string>

    <!-- Repeat -->
    <string name="repeat">Alarm Repeat</string>
    <string name="repeat_never">Never(only this week)</string>
    <string name="repeat_one_time">One time</string>
    <string name="repeat_two_times">Two times</string>
    <string name="repeat_three_times">Three times</string>
    <string name="repeat_forever">Forever</string>

    <!-- Label -->
    <string name="alarm_label">Label</string>
    <string name="alarm_label_autofill_hints">School, Faculty, College, University, Work, Pray, Food, Breakfast</string>

    <!-- Preferences -->
    <string name="key_pref_alarm_list" translatable="false">alarm_list</string>
    <string name="key_pref_app_theme" translatable="false">app_theme</string>
    <string name="key_pref_time_picker_mode" translatable="false">time_picker</string>
    <string name="title_pref_app_theme">App theme</string>
    <string name="title_pref_time_picker_mode">Time Picker mode</string>
    <string name="summary_pref_theme">Select app colors theme</string>
    <string name="summary_pref_time_picker_mode">Choose time picker as Clock or Spinner</string>


    <!-- Time Picker choices (entries and values) -->
    <string name="Spinner">Spinner</string>
    <string name="Clock">Clock</string>

    <!-- App Themes choices (entries and values) -->
    <string name="Purple">Purple</string>
    <string name="Blue">Blue</string>
    <string name="Orange">Orange</string>
    <string name="Black">Black</string>

    <!-- Intent keys -->
    <string name="key_intent_alarm_extra" translatable="false">alarm</string>
    <string name="key_intent_request_code" translatable="false">requestCode</string>
    <string name="key_pi_alarm_extra" translatable="false">alarm</string>

    <!-- Menu items -->
    <string name="settings">@string/title_activity_settings</string>
    <string name="about">@string/title_activity_about</string>

    <!-- Remaining time -->
    <string name="remaining_no_time_picked">Pick day and time</string>
    <string name="remaining_day_hour_minute">%s %s %s remaining</string>
    <plurals name="remaining_days">
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="remaining_hours">
        <item quantity="one">%d Hour</item>
        <item quantity="other">%d Hours</item>
    </plurals>
    <plurals name="remaining_minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>

    <string name="contentDesc_delete_alarm">Delete alarm</string>
    <string name="select_atleast_one_day">Select at least one day</string>
    <string name="swipe_up_to_dismiss">Swipe up to dismiss</string>

    <!-- AlarmDetails save state bundle's keys -->
    <string name="key_requestcode_savestate_alarmdetails" translatable="false">incoming_request_code</string>
    <string name="key_uniquecode_savestate_alarmdetails" translatable="false">alarm_unique_code</string>
    <string name="key_repeatid_savestate_alarmdetails" translatable="false">repeat_id</string>
    <string name="key_ringtonepath_savestate_alarmdetails" translatable="false">ringtone_path</string>

    <!-- About activity -->
    <string name="about_developer">This app is developed by Amr Salah Abdelhady.</string>
    <string name="about_narify_apps_link">Narify apps in Google Play Store: \nhttps://play.google.com/store/apps/developer?id=Narify</string>
    <string name="about_privacy_policy">Privacy Policy: \nhttps://github.com/amrsalah3/Awarm/blob/newer-version/PRIVACY_POLICY.md</string>

</resources>
